--- a/index.html
+++ b/index.html
@@ -176,4 +176,122 @@
       <div class="order-1 md:order-2">
         <div class="aspect-[16/10] rounded-2xl overflow-hidden shadow border bg-white" style="border-color:var(--line)">
           <!-- Foto do consultório destaque -->
-          <img src
+          <img src="consultorio1.jpg" alt="Consultório" class="h-full w-full object-cover" loading="lazy"/>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="divider max-w-7xl mx-auto"></div>
+
+  <!-- Serviços -->
+  <section id="servicos" class="py-16 md:py-24">
+    <div class="max-w-7xl mx-auto px-6">
+      <div class="flex items-end justify-between gap-4">
+        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Serviços</h2>
+        <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20saber%20sobre%20os%20serviços" class="hidden md:inline-flex items-center gap-2 hover:opacity-80" style="color:var(--ink)">Tire suas dúvidas →</a>
+      </div>
+      <p class="mt-3 text-zinc-600 max-w-2xl">Diagnóstico preciso e plano terapêutico individualizado, com foco em qualidade de vida e funcionalidade.</p>
+
+      <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <img src="consultorio2.jpg" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">Avaliação psiquiátrica</h3>
+            <p class="mt-1 text-sm text-zinc-600">Escuta qualificada, diagnóstico e plano terapêutico personalizado.</p>
+          </div>
+        </article>
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <img src="consultorio1.jpg" alt="Ansiedade e depressão" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">Ansiedade & depressão</h3>
+            <p class="mt-1 text-sm text-zinc-600">Tratamento baseado em evidências, psicoterapia e medicação quando indicada.</p>
+          </div>
+        </article>
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <img src="consultorio3.jpg" alt="TDAH em adultos" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">TDAH em adultos</h3>
+            <p class="mt-1 text-sm text-zinc-600">Avaliação estruturada e manejo terapêutico multimodal.</p>
+          </div>
+        </article>
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <img src="consultorio2.jpg" alt="Transtorno bipolar" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">Transtorno bipolar</h3>
+            <p class="mt-1 text-sm text-zinc-600">Estabilização do humor e prevenção de recaídas.</p>
+          </div>
+        </article>
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <!-- Corrigido: imagem local para evitar falha de carregamento -->
+          <img src="consultorio3.jpg" alt="Dependência química" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">Dependência química</h3>
+            <p class="mt-1 text-sm text-zinc-600">Estratégias de redução de danos e reabilitação com rede de apoio.</p>
+          </div>
+        </article>
+        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
+          <img src="consultorio1.jpg" alt="Telemedicina" class="h-44 w-full object-cover" loading="lazy"/>
+          <div class="p-5">
+            <h3 class="text-lg font-semibold" style="color:var(--ink)">Telemedicina</h3>
+            <p class="mt-1 text-sm text-zinc-600">Consultas on-line com sigilo e qualidade, conforme regulamentação vigente.</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Galeria -->
+  <section id="galeria" class="py-16 md:py-24" style="background:var(--sand)">
+    <div class="max-w-7xl mx-auto px-6">
+      <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Galeria do consultório</h2>
+      <p class="mt-3 text-zinc-600 max-w-2xl">Fotos reais do consultório (sem identificação de pacientes), em conformidade com o CFM e a LGPD.</p>
+      <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio1.jpg" alt="Consultório — recepção" loading="lazy"/>
+        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio2.jpg" alt="Consultório — sala de atendimento" loading="lazy"/>
+        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio3.jpg" alt="Consultório — detalhes" loading="lazy"/>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contato / CTA final -->
+  <section id="contato" class="py-16 md:py-24" style="background:#faf9f7">
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
+      <div>
+        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Vamos conversar</h2>
+        <p class="mt-3 text-zinc-700 max-w-xl">Agende sua consulta presencial ou por telemedicina. Respeito, ética e sigilo profissional.</p>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar pelo WhatsApp</a>
+          <a href="mailto:contato@exemplo.com" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">contato@exemplo.com</a>
+        </div>
+        <p class="mt-6 text-sm text-zinc-600">Em caso de emergência psiquiátrica, procure atendimento imediato (SAMU 192) ou o <a class="underline" href="https://www.cvv.org.br/" target="_blank" rel="noopener">CVV 188</a>.</p>
+      </div>
+      <div class="rounded-2xl border overflow-hidden shadow bg-white p-6" style="border-color:var(--line)">
+        <form class="grid gap-4">
+          <div class="grid md:grid-cols-2 gap-4">
+            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Nome" />
+            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="E-mail" type="email" />
+          </div>
+          <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Telefone" />
+          <textarea class="rounded-lg border px-4 py-3" rows="4" style="border-color:var(--line)" placeholder="Mensagem"></textarea>
+          <button class="rounded-lg px-5 py-3" style="background:var(--taupe); color:#fff">Enviar mensagem</button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer class="py-10 text-center text-sm text-zinc-500">
+    <div class="max-w-7xl mx-auto px-6">
+      © <span id="y"></span> Dr. Paulo Donadel — Psiquiatria & Saúde Mental. CRM: 00000 | RQE Psiquiatria: 0000. Em conformidade com o CFM e LGPD.
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('menuBtn')?.addEventListener('click',()=>{
+      const m = document.getElementById('mobileMenu');
+      if(!m) return; m.classList.toggle('hidden');
+    });
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
