--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <header class="sticky top-0 z-40 backdrop-blur border-b" style="background:rgba(255,255,255,.9); border-color: var(--line)">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3 group" aria-label="Página inicial">
-        <img src="logodrpaulo.png" alt="Logo Dr. Paulo Donadel" class="h-12 w-auto object-contain"/>
+        <img src="logopaulo.jpg" alt="Logo Dr. Paulo Donadel" class="h-12 w-auto object-contain"/>
         <div>
           <div class="font-serif text-2xl leading-none" style="color:var(--ink)">Dr. Paulo Donadel</div>
           <div class="text-xs" style="color:var(--taupe)">Psiquiatria & Saúde Mental</div>
@@ -86,10 +86,22 @@
           <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20avaliação" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar avaliação</a>
           <a href="#servicos" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">Conhecer serviços</a>
         </div>
+        <div class="mt-8 flex items-center gap-6 text-sm text-zinc-500">
+          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Atendimento humanizado</div>
+          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Baseado em evidências</div>
+          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Sigilo e acompanhamento</div>
+        </div>
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-2xl overflow-hidden shadow border" style="border-color:var(--line); background:#fff">
           <img src="./drpaulo.jpg" alt="Dr. Paulo Donadel" class="h-full w-full object-cover" loading="eager"/>
+        </div>
+        <div class="absolute -bottom-6 -left-6 bg-white shadow border rounded-2xl p-4 flex items-center gap-3" style="border-color:var(--line)">
+          <div class="h-10 w-10 rounded-full grid place-content-center" style="background:var(--sand); color:var(--taupe)">★</div>
+          <div class="text-sm">
+            <p class="font-semibold" style="color:var(--ink)">+1.200 pacientes acompanhados</p>
+            <p class="text-zinc-500">Consultas presenciais e telemedicina</p>
+          </div>
         </div>
       </div>
     </div>
@@ -108,10 +120,24 @@
             <li>Seguimento próximo com reavaliações periódicas.</li>
           </ul>
         </div>
+        <div class="mt-6 grid sm:grid-cols-3 gap-4">
+          <div class="rounded-xl border p-4" style="border-color:var(--line)">
+            <p class="text-2xl font-semibold" style="color:var(--ink)">12+</p>
+            <p class="text-sm text-zinc-500">anos de experiência clínica</p>
+          </div>
+          <div class="rounded-xl border p-4" style="border-color:var(--line)">
+            <p class="text-2xl font-semibold" style="color:var(--ink)">1.200+</p>
+            <p class="text-sm text-zinc-500">pacientes acompanhados</p>
+          </div>
+          <div class="rounded-xl border p-4" style="border-color:var(--line)">
+            <p class="text-2xl font-semibold" style="color:var(--ink)">Alta</p>
+            <p class="text-sm text-zinc-500">adesão ao tratamento</p>
+          </div>
+        </div>
       </div>
       <div class="order-1 md:order-2">
         <div class="aspect-[16/10] rounded-2xl overflow-hidden shadow border bg-white" style="border-color:var(--line)">
-          <img src="drpaulo_sobre.jpg" alt="Dr. Paulo Donadel no consultório" class="h-full w-full object-cover" loading="lazy"/>
+          <img src="logodrpaulo.jpg" alt="Logo Dr. Paulo Donadel" class="h-full w-full object-cover" loading="lazy"/>
         </div>
       </div>
     </div>
@@ -191,26 +217,4 @@
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
       <div>
         <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Vamos conversar</h2>
-        <p class="mt-3 text-zinc-700 max-w-xl">Agende sua consulta presencial ou por telemedicina. Respeito, ética e sigilo profissional.</p>
-        <div class="mt-6 flex flex-wrap gap-3">
-          <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar pelo WhatsApp</a>
-          <a href="mailto:contato@exemplo.com" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">contato@exemplo.com</a>
-        </div>
-        <p class="mt-6 text-sm text-zinc-600">Em caso de emergência psiquiátrica, procure atendimento imediato (SAMU 192) ou o <a class="underline" href="https://www.cvv.org.br/" target="_blank" rel="noopener">CVV 188</a>.</p>
-      </div>
-      <div class="rounded-2xl border overflow-hidden shadow bg-white p-6" style="border-color:var(--line)">
-        <form class="grid gap-4">
-          <div class="grid md:grid-cols-2 gap-4">
-            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Nome" />
-            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="E-mail" type="email" />
-          </div>
-          <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Telefone" />
-          <textarea class="rounded-lg border px-4 py-3" rows="4" style="border-color:var(--line)" placeholder="Mensagem"></textarea>
-          <button class="rounded-lg px-5 py-3" style="background:var(--taupe); color:#fff">Enviar mensagem</button>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <footer class="py-10 text-center text-sm text-zinc-500">
-    <div class="max-w-7xl mx-auto px
+        <p
