--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- SEO base -->
   <meta name="theme-color" content="#2f2f2f" />
-  <link rel="icon" type="image/png" href="/logopaulo.jpg" />
+  <link rel="icon" type="image/png" href="/logopaulo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
   <header class="sticky top-0 z-40 backdrop-blur border-b" style="background:rgba(255,255,255,.9); border-color: var(--line)">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3 group" aria-label="Página inicial">
-        <img src="logopaulo.jpg" alt="Logo Dr. Paulo Donadel" class="h-12 w-auto object-contain"/>
+        <img src="logopaulo.png" alt="Logo Dr. Paulo Donadel" class="h-12 w-auto object-contain"/>
         <div>
           <div class="font-serif text-2xl leading-none" style="color:var(--ink)">Dr. Paulo Donadel</div>
           <div class="text-xs" style="color:var(--taupe)">Psiquiatria & Saúde Mental</div>
@@ -137,7 +137,7 @@
       </div>
       <div class="order-1 md:order-2">
         <div class="aspect-[16/10] rounded-2xl overflow-hidden shadow border bg-white" style="border-color:var(--line)">
-          <img src="logodrpaulo.jpg" alt="Logo Dr. Paulo Donadel" class="h-full w-full object-cover" loading="lazy"/>
+          <img src="logodrpaulo.png" alt="Logo Dr. Paulo Donadel" class="h-full w-full object-contain bg-white" loading="lazy"/>
         </div>
       </div>
     </div>
@@ -154,42 +154,42 @@
       <p class="mt-3 text-zinc-600 max-w-2xl">Diagnóstico preciso e plano terapêutico individualizado, com foco em qualidade de vida e funcionalidade.</p>
       <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico1.jpg" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?doctor,consultation" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Avaliação psiquiátrica</h3>
             <p class="mt-1 text-sm text-zinc-600">Escuta qualificada, diagnóstico e plano terapêutico personalizado.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico2.jpg" alt="Ansiedade e depressão" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?mental-health" alt="Ansiedade e depressão" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Ansiedade & depressão</h3>
             <p class="mt-1 text-sm text-zinc-600">Tratamento baseado em evidências, psicoterapia e medicação quando indicada.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico3.jpg" alt="TDAH em adultos" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?adhd,brain" alt="TDAH em adultos" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">TDAH em adultos</h3>
             <p class="mt-1 text-sm text-zinc-600">Avaliação estruturada e manejo terapêutico multimodal.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico4.jpg" alt="Transtorno bipolar" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?bipolar,psychology" alt="Transtorno bipolar" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Transtorno bipolar</h3>
             <p class="mt-1 text-sm text-zinc-600">Estabilização do humor e prevenção de recaídas.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico5.jpg" alt="Dependência química" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?addiction,recovery" alt="Dependência química" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Dependência química</h3>
             <p class="mt-1 text-sm text-zinc-600">Estratégias de redução de danos e reabilitação com rede de apoio.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="servico6.jpg" alt="Telemedicina" class="h-44 w-full object-cover" loading="lazy"/>
+          <img src="https://source.unsplash.com/600x400/?telemedicine,online" alt="Telemedicina" class="h-44 w-full object-cover" loading="lazy"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Telemedicina</h3>
             <p class="mt-1 text-sm text-zinc-600">Consultas on-line com sigilo e qualidade, conforme regulamentação vigente.</p>
@@ -214,7 +214,4 @@
 
   <!-- Contato -->
   <section id="contato" class="py-16 md:py-24" style="background:#faf9f7">
-    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
-      <div>
-        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Vamos conversar</h2>
-        <p
+    <div class="max-w
